--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -5,6 +5,7 @@
   src: url("./new-spirit-400.woff2") format("woff2");
   font-style: normal;
   font-weight: 400;
+  font-display: swap;
 }
 
 @font-face {
@@ -12,4 +13,5 @@
   src: url("./new-spirit-700.woff2") format("woff2");
   font-style: normal;
   font-weight: 700;
+  font-display: swap;
 }
